<resources>
    <string name="app_name">GRÜV-IN</string>
    <string name="start_time">00:00:00</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="search_location_here">search_location_here</string>
    <string name="search">search</string>
    <string name="current_location">CURRENT LOCATION</string>
    <string name="other_location">OTHER LOCATION</string>
    <string name="start_game">START GAME</string>
    <string name="start_game_title">Start game</string>
    <string name="thank_you_for_confirming">THANK YOU FOR CONFIRMING</string>
    <string name="confirmed">CONFIRMED</string>
    <string name="gruv_in">GRUV-IN</string>
    <string name="gametime">GAMETIME</string>
    <string name="countdown">COUNTDOWN</string>
    <string name="address">Address</string>

    <string name="tab_1">Label 1</string>
    <string name="tab_2">Label 2</string>
    <string name="tab_3">Label 3</string>
    <string name="tab_4">Label 4</string>
    <string name="tab_5">Label 5</string>

    <string name="home">Home</string>
    <string name="events">Events</string>
    <string name="latest">Latest</string>
    <string name="create">CreateEvent</string>
    <string name="more">More</string>
    <string name="organiser">Organiser</string>
    <string name="users">users</string>
    <string name="new_schedule">A D D E V E N T</string>
    <string name="game">GAME:</string>
    <string name="time">TIME:</string>
    <string name="event_title"> Event Title:</string>
    <string name="join_game">J O I N</string>
    <string name="location">YOUR LOCATION:</string>
    <string name="starting_date">Starting Date</string>
    <string name="Starting_time">Starting Time</string>
    <string name="schedule_game">S C H E D U L E</string>
    <string name="signup">SignUp</string>
    <string name="title_activity_audio_player">AudioPlayer</string>
    <string name="JOIN">J o i n</string>
    <string name="date">DATE:</string>
    <string name="HOST">H o s t</string>
        <string name="back"><![CDATA[<]]></string>
        <string name="rewind"><![CDATA[<<]]></string>
        <string name="pause">||</string>
    <string name="frgt_pwd">Forgot Password??</string>
    <string name="pwd_hint">Password</string>
    <string name="gPrefs_marker">MarkerText</string>
    <string name="andsym"><![CDATA[&]]></string>
    <string name="eventlisttitle">U P C O M I G E V E N T S</string>
    <string name="add">ADD</string>
    <string name="err_msg_otp">Enter OTP</string>
    <string name="err_msg_valid_otp">Enter Valid OTP</string>
    <string name="sPrefs_login">login</string>
    <string name="sPrefs_type">type</string>
    <string name="sPrefs_event">UserId</string>
    <string name="sPrefsuser_login">userLogin</string>
    <string name="sPrefs_check">checkitems</string>
    <string name="sPrefs_name">FirstName</string>
    <string name="premiumaccount"> If you are interested in applying for a Premium Hosting Account,to be able to upload music and schedule events.
        </string>
    <string name="contactus">please contact us at </string>
    <string name="mail">info@gruv-in.com</string>
    <string name="time_set">Set time</string>
    <string name="cancel">Cancel</string>
    <string name="sPrefs_spinner">Spinnervalue</string>
    <string name="sPrefs_userlogin">userLogin</string>
</resources>
