<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarschedule"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:background="@drawable/header"
            android:title="Start game"
            android:titleTextColor="@color/colorAccent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:id="@+id/toolbar_scheduletitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:text="S C H E D U L E"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="normal" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColorPrimary="@color/colorAccent"
        android:layout_gravity="center"
        android:background="@color/black"
        android:weightSum="1">
        <LinearLayout xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/ll1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <LinearLayout
                android:layout_width="match_parent"
                android:id="@+id/ll2"
                android:layout_marginTop="70dp"
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:weightSum="1">
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:id="@+id/ll3">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv1"
                    android:text="Distance:"
                    android:layout_margin="10dp"
                    android:textColor="@color/textColorHint"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv2"
                    android:text="Duration:"
                    android:textColor="@color/textColorHint"
                    android:textSize="15sp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
                <TextView
                    android:text="2EEE4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    android:visibility="gone"/>
            </LinearLayout>

            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                tools:context="com.tcst.android.gruvin.Activities.Schedule" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game"
                android:layout_marginTop="5dp"
                android:textColor="#A9A9A9"
                android:textSize="19sp"
                android:textStyle="normal"
                android:id="@+id/txt_gamename"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#A9A9A9"
                android:textSize="19sp"
                android:text="@string/location"
                android:textStyle="normal"
                android:id="@+id/txt_eventloac"
                android:layout_below="@+id/textClock"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/time_text"
                android:text="@string/time"
                android:textColor="#A9A9A9"
                android:textSize="19sp"
                android:textStyle="normal"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:id="@+id/txteventdate"
                android:textSize="19sp"
                android:textColor="#A9A9A9"/>


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/edit_message"
            android:visibility="gone"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/join"
            android:text="@string/join_game"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:visibility="visible"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:layout_marginBottom="17dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:id="@+id/navigate"
            android:background="@drawable/loc"
            android:paddingEnd="10dp"
            android:layout_alignBottom="@+id/join"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="11dp"
            android:layout_marginEnd="11dp"
            android:paddingRight="10dp" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>