<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarschedule"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/black"
            android:title="Start game"
            android:titleTextColor="@color/colorAccent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            <TextView
                android:id="@+id/toolbar_jointitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="PUBLIC MAP"
                android:textAlignment="center"
                android:layout_marginTop="15dp"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/txt_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Back"
                android:layout_marginTop="15dp"
                android:textColor="@color/blue"
                android:textSize="22sp"
                android:textStyle="bold"
                android:drawableLeft="@drawable/backarrow" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="Joined"
                android:id="@+id/txt_joined"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginRight="10dp"
                android:textColor="@color/blue"/>

        </android.support.v7.widget.Toolbar>
        <View android:layout_height="2dp"
            android:background="#FF1493"
            android:layout_width="fill_parent"
            android:id="@+id/stripBelowToolbar"/>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:id="@+id/activity_main"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textColorPrimary="@color/colorAccent"
        android:layout_gravity="center"
        android:background="@color/black"
        android:weightSum="1">


        <ScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@+id/join">

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
            >
            <fragment
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                />
                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="wrap_content"
                        android:text="@string/game"
                        android:layout_marginTop="5dp"
                        android:textColor="#A9A9A9"
                        android:textSize="19sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textStyle="normal"
                        android:id="@+id/txt_gamename"
                    />

                    <TextView
                        android:layout_width="380dp"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        android:text="@string/location"
                        android:textStyle="normal"
                        android:id="@+id/txt_eventloac"
                        android:layout_below="@+id/textClock"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/time_text"
                        android:text="@string/time"
                        android:textSize="18sp"
                        android:layout_marginTop="20dp"
                        android:textColor="@color/white"
                        android:textStyle="normal"
                        />
                    <TextView
                        android:text="GRUV:"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/eventName"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>

                    <TextView
                        android:text="DESCRIPTION:"
                        android:drawableLeft="@android:drawable/ic_menu_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Description"
                        android:textSize="18dp"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/cardview_light_background" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edt_des"
                android:background="@drawable/background1"
                android:text="Welcome to Tabcaps Softtech Private Limited which is located at Karan Arcade,Second Floor,Hitech city, Hyderabad,Telanagana."
                android:layout_marginTop="2dp"
                android:layout_marginBottom="6dp"
                android:textSize="16sp"
                android:paddingLeft="5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/white"
                />
        </LinearLayout>
        </ScrollView>

        <Button
            android:layout_width="300dp"
            android:layout_height="45dp"
            android:id="@+id/join"
            android:text="@string/join_game"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:visibility="visible"
            android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>